# flashlight

./: .clang-format  .dockerignore  .gitignore  .readthedocs.yml  CITATION  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-CPU  Dockerfile-CPU-Base  Dockerfile-CUDA  Dockerfile-CUDA-Base  LICENSE  README.md  batch_submit.sh  bazel-bin  bazel-flashlight  bazel-out  bazel-testlogs  codecov.yml  conanfile.py  wrapper.sh  wrapper_detr.sh  wrapper_detr_continue.sh
app/: CMakeLists.txt
app/asr/: CMakeLists.txt  Decode.cpp  Test.cpp  Train.cpp
app/image_classification/: CMakeLists.txt
app/object_detection/: CMakeLists.txt
app/vision/: CMakeLists.txt  Resnet34.cpp
bindings/python/: CMakeLists.txt  MANIFEST.in  README.md  setup.py
examples/: AdaptiveClassification.cpp  CMakeLists.txt  Classification.cpp  DistributedTraining.cpp  LinearRegression.cpp  Mnist.cpp  Perceptron.cpp  README.md  Resnet34.cpp  RnnLm.cpp  Xor.cpp
ext/test/: CMakeLists.txt
extensions/: CMakeLists.txt
extensions/common/: CMakeLists.txt  DistributedUtils.cpp  DistributedUtils.h  SequentialBuilder.cpp  SequentialBuilder.h  Utils-inl.h  Utils.cpp  Utils.h
extensions/test/: CMakeLists.txt
extensions/tests/: CMakeLists.txt
flashlight/: CMakeLists.txt  flashlight.h
flashlight-extensions/: CMakeLists.txt
flashlight-extensions/common/: CMakeLists.txt  SequentialBuilder.cpp  SequentialBuilder.h  Utils.cpp  Utils.h
flashlight/app/: CMakeLists.txt  README.md
flashlight/autograd/: CMakeLists.txt  Functions.cpp  Functions.h  Utils.cpp  Utils.h  Variable.cpp  Variable.h  autograd.h
flashlight/cmake/: FindGloo.cmake  flashlightConfig.cmake.in
flashlight/common/: CMakeLists.txt  CppBackports.h  CudaUtils.cpp  CudaUtils.h  Defines.cpp  Defines.h  DevicePtr.cpp  DevicePtr.h  DynamicBenchmark.cpp  DynamicBenchmark.h  Exception.h  Histogram.cpp  Histogram.h  Logging.cpp  Logging.h  Plugin.cpp  Plugin.h  Serialization-inl.h  Serialization.h  Types.h  Utils.cpp  Utils.h  common.h  cuda.h
flashlight/contrib/: CMakeLists.txt  contrib.h
flashlight/dataset/: BatchDataset.cpp  BatchDataset.h  BlobDataset.cpp  BlobDataset.h  CMakeLists.txt  ConcatDataset.cpp  ConcatDataset.h  Dataset.h  DatasetIterator.h  FileBlobDataset.cpp  FileBlobDataset.h  ImageDataset.cpp  ImageDataset.h  ImagenetUtils.cpp  ImagenetUtils.h  MergeDataset.cpp  MergeDataset.h  PrefetchDataset.cpp  PrefetchDataset.h  ResampleDataset.cpp  ResampleDataset.h  ShuffleDataset.cpp  ShuffleDataset.h  TensorDataset.cpp  TensorDataset.h  TransformDataset.cpp  TransformDataset.h  Utils.cpp  Utils.h  datasets.h
flashlight/distributed/: CMakeLists.txt  DistributedApi.cpp  DistributedApi.h  FileStore.cpp  FileStore.h  LRUCache.h  distributed.h
flashlight/examples/: AdaptiveClassification.cpp  Benchmark.cpp  CMakeLists.txt  Classification.cpp  DistributedTraining.cpp  LinearRegression.cpp  Mnist.cpp  Perceptron.cpp  RnnLm.cpp  Xor.cpp
flashlight/experimental/: CMakeLists.txt
flashlight/ext/: CMakeLists.txt
flashlight/fl/: CMakeLists.txt  flashlight.h
flashlight/lib/: CMakeLists.txt
flashlight/memory/: CMakeLists.txt  MemoryInit.cpp  MemoryManagerAdapter.cpp  MemoryManagerAdapter.h  MemoryManagerDeviceInterface.h  MemoryManagerInstaller.cpp  MemoryManagerInstaller.h  memory.h
flashlight/meter/: AverageValueMeter.cpp  AverageValueMeter.h  CMakeLists.txt  CountMeter.cpp  CountMeter.h  EditDistanceMeter.cpp  EditDistanceMeter.h  FrameErrorMeter.cpp  FrameErrorMeter.h  MSEMeter.cpp  MSEMeter.h  TimeMeter.cpp  TimeMeter.h  TopKMeter.cpp  TopKMeter.h  meters.h
flashlight/nn/: CMakeLists.txt  DistributedUtils.cpp  DistributedUtils.h  Init.cpp  Init.h  Utils.cpp  Utils.h  nn.h
flashlight/optim/: AMSgradOptimizer.cpp  AMSgradOptimizer.h  AdadeltaOptimizer.cpp  AdadeltaOptimizer.h  AdagradOptimizer.cpp  AdagradOptimizer.h  AdamOptimizer.cpp  AdamOptimizer.h  CMakeLists.txt  NovogradOptimizer.cpp  NovogradOptimizer.h  Optimizers.cpp  Optimizers.h  RMSPropOptimizer.cpp  RMSPropOptimizer.h  SGDOptimizer.cpp  SGDOptimizer.h  Utils.cpp  Utils.h  optim.h
flashlight/pkg/: CMakeLists.txt
flashlight/test/: CMakeLists.txt
flashlight/tests/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/audio/: CMakeLists.txt
libraries/common/: CMakeLists.txt  ProducerConsumerQueue.h  String.cpp  String.h  System.cpp  System.h
libraries/language/: CMakeLists.txt
libraries/sequence/: CMakeLists.txt
libraries/tests/: CMakeLists.txt
tasks/: CMakeLists.txt
tasks/language_modeling/: BuildDictionary.cpp  CMakeLists.txt  Train.cpp
tasks/speech_recognition/: CMakeLists.txt  Decode.cpp  Test.cpp  Train.cpp
tests/: CMakeLists.txt
tests/autograd/: AutogradTest.cpp
tests/common/: DevicePtrTest.cpp  LoggingTest.cpp  SerializationTest.cpp
tests/dataset/: DatasetTest.cpp  UtilsTest.cpp
tests/distributed/: AllReduceBenchmark.cpp  AllReduceTest.cpp
tests/memory/: CachingMemoryManagerTest.cpp  CompositeMemoryAllocatorTest.cpp  ConfigurableMemoryAllocatorTest.cpp  FreeListTest.cpp  MemoryFrameworkTest.cpp  MemoryPoolTest.cpp
tests/meter/: MeterTest.cpp
tests/nn/: Benchmark.cpp  ModuleTest.cpp  NNSerializationTest.cpp  SerializationTest.cpp  UtilsTest.cpp
tests/optim/: OptimBenchmark.cpp  OptimTest.cpp
vision/: CMakeLists.txt  Detr.cpp  Resnet34.cpp  Resnet34Backbone.cpp  Resnet34Backbone.h
vision/criterion/: CMakeLists.txt  Hungarian.cpp  Hungarian.h  HungarianLib.cpp  HungarianLib.h  SetCriterion.cpp  SetCriterion.h
vision/dataset/: BoxUtils.cpp  BoxUtils.h  CMakeLists.txt  Coco.cpp  Coco.h  CocoDataset.cpp  CocoDataset.h  DataLoader.h  DistributedDataset.cpp  DistributedDataset.h  ImageDataset.cpp  ImageDataset.h  Imagenet.cpp  Imagenet.h  ImagenetUtils.cpp  ImagenetUtils.h  Transforms.cpp  Transforms.h  Utils.h  VisionDataset.cpp  VisionDataset.h
vision/flags/: Train.cpp  Train.h
vision/models/: Resnet.cpp  Resnet.h
vision/nn/: CMakeLists.txt  PositionalEmbeddingSine.cpp  PositionalEmbeddingSine.h  Tranformer.h  Transformer.h
vision/scripts/: convert_to_tensorboard.py  eval_coco.py  prepare_coco.py  (+1 more)
(+2559 files in other folders)
